2008-02-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.2 released (SVN tag: release-4-0-2)

	* NEWS, VERSION: Release notes added and version number updated
	for IT++ 4.0.2

	* ChangeLog-2007: Archive ChangeLog entries from year 2007

2008-02-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/parser.cpp, tests/parser_test.cpp,
	tests/parser_test.ref: Fix wrong verbose output of Parser's get()
	function for int and bool types

	When Parser was used to scan an already defined int or bool
	variable and the parsed variable was not found, the verbose
	output was wrong. Here is a minimum example:

          Parser p(argc, argv);
	  int i = 5;
	  bool b = true;
          p.get(a, "a");
	  p.get(b, "b");

	The wrong output of this program was:

	  i = [];
	  b = ;

	instead of:

	  i = 5;
	  b = 1;

	This patch fixes this problem and also improves the parser_test
	program, to detect such issues in future. Thanks to Jia-Yin for
	reporting this problem.

	* itpp/comm/convcode.h: Documentation improvements related to
	encoder state.

	This patch improves the documentation of the encoding and decoding
	functions. Especially, it clarifies why set_start_state() and
	init_encoder() methods have no effect on encode_tail() and
	encode_tailbite() functions.

	* itpp/comm/modulator.h: Improve the documentation of
	Modulator::get_bits2symbols() function

2008-01-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/gf2mat.cpp: Fix GF2mat_sparse_alist::from_sparse()
	conversion function

	The conversion function from GF2mat_sparse format to "alist" text
	file format could incorrectly create the "mlist" and "nlist"
	matrices with indexes of non-zero entries. This patch fixes this
	bug and also improves the conversion speed by using the
	get_nz_indices() function from Sparse_Vec class and set_row()
	instead of append_row() where possible.

2008-01-23  Adam Piatyszek  <ediap@users.sourceforge.net>
