@@ -342,6 +342,9 @@ AC_SUBST(EXPLICIT_LIBS)
 AC_SUBST(PRIVATE_LIBS)
 
 
+# Set conditional BUILD_ZDOTUSUB flag for ZDOTU Fortran wrapper
+AM_CONDITIONAL([BUILD_ZDOTUSUB], [test "x$ax_build_zdotusub" = xyes])
+
 # Set conditionals for runing test programs
 AM_CONDITIONAL([RUN_LAPACK_TESTS], [test "x$acx_lapack_ok" = xyes])
 AM_CONDITIONAL([RUN_FFT_TESTS], [test "x$acx_fft_ok" = xyes])
